use jdk to compile java semantic db